# covid-dashboard

./: .flaskenv  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  TODO.md  app.py  app_redirect.py  cli.py  docker-compose.yml  populate_db.py  populate_db_world.py  pyproject.toml  reduce_map.py  requirements.txt  setup.py  tox.ini  wsgi.py
.github/workflows/: main.yaml  main.yml
covid/: app.py  callbacks.py  config.py  data.py  db.py  extension.py  layout.py
covid/api/: __init__.py
covid/api/resources/italy/: __init__.py  province_case.py  provinces.py  region.py  region_case.py
covid/callbacks/: italy.py  multipage.py  world.py
covid/cli/: __init__.py  cli_italy.py  cli_world.py
covid/components/: control_row.py  navbar.py  plot_row.py  world.py
covid/dashboard/: __init__.py  layout.py
covid/dashboard/callbacks/: italy.py  multipage.py  world.py
covid/dashboard/components/: control_row.py  help.py  navbar.py  plot_row.py  world.py
covid/dashboard/plots/: bar.py  maps.py
covid/db/: __init__.py  italy_province.py  italy_province_case.py  italy_region.py  italy_region_case.py  world_case.py
covid/plots/: bar.py  maps.py
data/: italy-reduced-provinces.geojson  italy-reduced.geojson  world_population.json
tests/unit/covid/: test_db.py
