[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.poetry]
name = "covid-dashboard"
version = "0.1.0"
description = ""
authors = ["Michele Vascellari <michele.vascellari@michele.vascellari.com>"]

[tool.poetry.dependencies]
python = "^3.7"
plotly = "4.6.0"
dash = "1.11.0"
pandas = "0.25.3"
numpy = "1.18.1"
dash-bootstrap-components = "0.9.2"
sqlalchemy = "^1.3.16"
mysqlclient = "1.4.6"
orjson = "^2.6.5"
simplification = "0.5.1"
geojson = "2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
rope = "0.16.0"